--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,3 +78,35 @@ form{
   background: #e61415;
   box-shadow: 3px 2px 8px 0px #e61415, 0px 12px 15px 0 rgb(0 0 0 / 19%);
 }
+
+/* styling the cards for recipe info */
+.card-image.is-size-2{
+  font-size: 0!important;
+}
+
+.rec-card{
+  box-shadow: 9px 1px 22px grey!important;
+}
+
+.column, .rec-card, img{
+  border-radius: 2rem!important;
+}
+
+.recipe-info{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgb(0 0 0 / 49%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.5s ease-in;
+  opacity: 0;
+  border-radius: 2rem!important;
+}
+
+.recipe-info:hover{
+  opacity: 1;
+}
